# pico-kiln

./: .gitignore  ADAPTIVE_CONTROL.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  RATE_CONTROL.md  README.md  THERMAL_MODEL.md  THERMAL_MODEL_QUICK_START.md  TUNING.md  analyze_tuning.py  boot.py  clean_logs.sh  compile.sh  config.example.py  deploy.sh  dump_logs.sh  main.py  sync_profiles.sh  temp.py  web_server.py  wifi_manager.py
.github/workflows/: build.yml  deploy.yml  firmware.yml
debug/: README.md  debug_boot.py  debug_thermocouple.py  main_safe.py  read_boot_logs.py
docs/superpowers/plans/: 2026-06-04-web-config-page.md  2026-06-05-usb-ncm-softap-provisioning.md  2026-06-06-firmware-observability.md
docs/superpowers/specs/: 2026-06-04-web-config-page-design.md  2026-06-05-usb-ncm-softap-provisioning-design.md  2026-06-06-firmware-observability-design.md
kiln/: __init__.py  comms.py  control_thread.py  data_logger.py  hardware.py  pid.py  pid_scheduler.py  profile.py  rate_monitor.py  scheduler.py  state.py  tuner.py
lib/: README.md  lcd1602_i2c.py  lockable.py  wrapper.py
lib/adafruit_bus_device/: spi_device.py
profiles/: biscuit_faience.json  biscuit_faience_adaptive.json  bisque_cone04.json  cone6_glaze.json  test_adaptive.json  test_profile.json  test_ramp.json
python/: README.md  compile.sh  debug.sh  deploy.sh  dump_logs.sh  mpy-detect.py  remove_prints.py  requirements.txt  sync_profiles.sh
python/debug/: BOOT_DEBUG_GUIDE.md  debug_lcd.py  main_safe.py  test_thermocouple_basic.py
python/docs/: DELAYED_START.md  RATE_CONTROL.md  VALIDATION_REPORT.md
python/kiln/: __init__.py  profile.py  state.py  tuner.py
python/lib/: adafruit_max31856.py  wrapper.py
python/server/: profile_cache.py  wifi_manager.py
rust/: .gitignore  ARCHITECTURE.md  Cargo.toml  MIGRATION_AUDIT.md  NANOFISH_EXPLORE.md  PICOSERVE_RAM.md  README.md  TESTING.md  UNIMPLEMENTED.md  config.example.json
rust/kiln-app/: Cargo.toml
rust/kiln-app/src/: api.rs  config.rs  csv.rs  errors.rs  html.rs  json.rs  lib.rs  logging.rs  profile_json.rs  recovery_io.rs  server.rs  timefmt.rs  tuning_names.rs
rust/kiln-control/: Cargo.toml
rust/kiln-control/src/: controller.rs  lib.rs  mock.rs  params.rs  run.rs
rust/kiln-core/: Cargo.toml  README.md
rust/kiln-core/src/: diag.rs  gain_schedule.rs  lib.rs  pid.rs  profile.rs  protocol.rs  rate_monitor.rs  recovery.rs  scheduler.rs  ssr_schedule.rs  state.rs  temp_filter.rs  tuner.rs
rust/kiln-core/tests/: replay_pid.rs  replay_profile.rs  replay_rate.rs  replay_recovery.rs  replay_ssr_schedule.rs  replay_state.rs  replay_temp_filter.rs  replay_tuner.rs
rust/kiln-core/tests/fixtures/: pid_golden.csv  profile_golden.csv  rate_golden.csv  recovery_golden.csv  ssr_schedule_golden.csv  state_recovery_golden.csv  state_run_golden.csv  state_stall_golden.csv  temp_filter_golden.csv  tuner_error_golden.csv  tuner_safe_golden.csv  tuner_standard_golden.csv
rust/kiln-core/tools/: gen_pid_golden.py  gen_profile_golden.py  gen_rate_golden.py  gen_recovery_golden.py  gen_ssr_schedule_golden.py  gen_state_golden.py  gen_temp_filter_golden.py  gen_tuner_golden.py
rust/kiln-firmware/: Cargo.toml  build.rs  memory.x
rust/kiln-firmware/.cargo/: config.toml
rust/kiln-firmware/src/: dhcp.rs  flash_handshake.rs  lcd.rs  main.rs  platform.rs  stack.rs
rust/kiln-hal/: Cargo.toml  README.md
rust/kiln-hal/src/: lib.rs  max31856.rs  platform.rs  ssr.rs
rust/kiln-log/: Cargo.toml
rust/kiln-log/src/: format.rs  lib.rs  ring.rs  rotation.rs
rust/kiln-sim/: Cargo.toml
rust/kiln-sim/src/: lib.rs  main.rs
rust/scripts/: compile.sh  deploy.sh  ram.sh  watch_faults.sh
scripts/: analyze_final_climb.py  analyze_heat_loss.py  analyze_pid_performance.py  analyze_tuning.py  compare_runs.py  generate_thermal_model_config.py  plot_profile.py  plot_run.py  plot_tuning_phases.py
scripts/analyzer/: __init__.py  data.py  pid.py  reporting.py  thermal.py
server/: data_logger.py  html_cache.py  lcd_manager.py  log_manager.py  recovery.py  status_receiver.py  stdout_capture.py  web_server.py  wifi_manager.py
static/: index.html  tuning.html
web/: .gitignore  ANDROID_BUILD.md  DESKTOP_MOBILE_BUILD.md  README.md  UX_AUDIT.md  biome.json  components.json  index.html  package-lock.json  package.json  sign-and-install.sh  vite.config.ts
web/public/: manifest.json
web/src/: routeTree.gen.ts  router.tsx  styles.css
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs
web/src-tauri/src/monitor/: commands.rs  mod.rs  service.rs
web/src/components/: ConnectionStatus.tsx  ErrorAlert.tsx  Header.tsx  PicoConnectionConfig.tsx  PicoConnectionDialog.tsx  PicoQuickConnect.test.tsx  PicoQuickConnect.tsx  RequireConnection.tsx  ThemeToggle.tsx
web/src/components/charts/: area-chart.tsx  area-gradient-defs.tsx  area.tsx  chart-config-context.tsx  chart-context.tsx  chart-reveal-clip.tsx  composed-chart.tsx  fade-edges.ts  grid.tsx  line-chart.tsx  line.tsx  live-line-chart.tsx  live-line.tsx  live-x-axis.tsx  live-y-axis.tsx  path-stroke-utils.ts  pattern-area.tsx  series-bar.tsx  series-hover-dim.tsx  series-markers.tsx  time-series-chart-shell.tsx  use-chart-interaction.ts  use-scheduled-tooltip.ts  x-axis.tsx  y-axis.tsx
web/src/components/logs/: LogView.tsx
web/src/components/ui/: alert.tsx  button.tsx  switch.tsx
web/src/integrations/tanstack-query/: root-provider.tsx
web/src/integrations/tauri/: hooks.ts  kiln-monitor.ts  monitor-bridge.tsx
web/src/lib/: chart-time.test.ts  chart-time.ts  csv-parser.test.ts  csv-parser.ts  diag-parser.test.ts  diag-parser.ts  profile-schema.test.ts  profile-schema.ts  profile-utils.test.ts  profile-utils.ts  run-series.ts  run-stats.test.ts  run-stats.ts  step-utils.tsx  tuning-analysis.test.ts  tuning-analysis.ts  use-profile-draft.ts  utils.ts
web/src/lib/__fixtures__/: tuning_full.csv  (+1 more)
web/src/routes/: __root.tsx  analyze.tsx  config.tsx  editor.tsx  files.tsx  index.tsx  logs.tsx  visualizer.tsx
(+57 files in other folders)
