[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-notification = "2"
# Vendored from crates.io 0.7.1 with a patched Android LifecycleService that
# self-refreshes its foreground notification from a file the app writes each
# poll (see vendor/.../LifecycleService.kt and monitor::write_notif_label).
tauri-plugin-background-service = { path = "vendor/tauri-plugin-background-service" }
async-trait = "0.1"
tokio = { version = "1", features = ["time", "sync", "macros", "rt"] }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
